css/hhss.css
/* ... */
.quiltsh2 {
    border: 4px solid #243466;
    grid-area: 2 / 1 / 3 / 2;
    height: 20vw;
    width: 20vw;
}

.quiltsh2 a {
    color: #243466;
    display: flex;
    font-size: 3vw;
    font-weight: 600;
    /* margin: 8vw auto; */
    padding: 7% 3%;
    text-align: center;
    text-decoration: none;
}

/*==================================================================================
    SHOP / POLICY FROM 0PX
===================================================================================*/


/*==================POLICY 0px================*/
.policybox {
    align-items: center;
    column-gap: 0px;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: .5fr 1fr;
    justify-items: center; /*was justify-items: start;*/
    row-gap: 20px;
}

.policylogo {
    grid-area: 1 / 1 / 2 / 2;
    height: auto;
    max-width: 70%;
}
.ppolicy {grid-area: 2 / 1 / 3 / 2;}

/*================================================================================
    ISLAND STYLE FROM 0PX
==================================================================================*/
.trendtitle {
    column-gap: 5vw;
    display: grid;
    grid-template-columns: .45fr .75fr;
    grid-template-rows: .1fr;
    padding: 100px 5vw 0;
}

.trendtitle h2 {
    font-size: 2vw;
    font-weight: 600;
    grid-area: 1 / 1 / 2 / 2;
}

.trendtitleline {
    background-color: #243466;
    grid-area: 1 / 2 / 2 / 3;
    height: 5px;
    align-self: center;
    width: 100%;
}

.trendbox {
    column-gap: 2.5vw;
    display: grid;
    grid-template-columns: .75fr .25fr;
    grid-template-rows: .1fr 1fr;
    margin: 5vw 2.5vw 10vw;
}

.trendimgbox {
    grid-area: 2 / 1 / 3 / 2;
    position: relative;
}

.trendimgbox img {
    display: block;
    height: auto;
    width: 100%;
}

.trendimglink {
    background: #243466;
    display: block;
    grid-area: 1 / 1 / 2 / 2;
    height: 6vw;
    width: 100%;
}

.trendimglink a {
    color: ivory;
    display: flex;
    font-size: 2.5vw;
    padding: 2% 2%;
    font-weight: 400;
    text-decoration: none;
}

.trendtext {
    grid-area: 1 / 2 / 3 / 3;
}

/*================================================================================
    OUR STORY / CONTACT FROM 0PX
==================================================================================*/
#about {
    padding-top: 100px;
}

.aboutbox img {
    display: none;
}

/*===============SMOL CONTACT BOX=============*/
.smolcontactbox h1 {
    font-size: 15px;
    margin: 0;
    padding: 0;
}

.smolcontactbox {
    align-items: center;
    column-gap: 4px;
    display: grid;
    grid-template-columns: .25fr .5fr ;
    grid-template-rows: repeat(2, 1fr);
    justify-content: center;
    row-gap: 15px;
}

.smolcontactbox img {
    max-height: 40px;
    width: auto;
}

.smolmailicon { grid-area: 1 / 1 / 2 / 2;}
.smolmail { grid-area: 1 / 2 / 2 / 2;}
.smoligicon { grid-area: 2 / 1 / 3 / 2;}
.smolig { grid-area: 2 / 2 / 3 / 3;}


/*==================CONTACT==========*/
#contact {
    height: 80px;
    margin-top: -20px;
    position: relative;
    width: 100%;
}

.contactbox { /*CONTACTBOX NOT DISPLAY IN FOOTER ON SMOL SCREENS*/
    display: none;
}

/*======================================================================================
                                HAPPY PEOPLE FROM 0PX
======================================================================================*/
.pplrow {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    padding: 100px 4px 0;
}

.pplcol {
    -ms-flex: 100%;
    flex: 100%;
    max-width: 100%;
    padding: 0 4px;
}

.pplcol img {
    margin-top: 8px;
    vertical-align: middle;
    width: 100%;
}

.pplrow, .pplcol, .pplcol img {
    box-sizing: border-box;
}

/*======================================================================================
                                MOBILE BOUTIQUE FROM 0PX
======================================================================================*/
.mbbox {
    height: auto;
    justify-self: center;
    position: relative;
    padding-top: 100px;
    margin: auto auto 5vw;
    width: 55vw;
}

.mbbox img {
    display: block;
    position: absolute;
    transition: opacity 1s;
    opacity: 0;
}

.mbbox img:first-child {
    z-index: 2;
    opacity: 1;
}

.mbbox img:last-child {
    z-index: 1;
    opacity: 1;
}
/* ... */

